# LibCoro

./: CMakeLists.txt  CMakePresets.json  README.md  install.py
LibCoro/: CMakeLists.txt
LibCoro/include/libcoro/: CMakeLists.txt  Generator.hpp  Task.hpp
LibCoro/include/libcoro/core/: CMakeLists.txt  MutexProtected.hpp  ThreadPool.hpp
LibCoro/source/: CMakeLists.txt  Task.cpp
cmake/: LibCoroConfig.cmake
